ui/genetiff/tiff_io.h

/* One can open a tif file with Open_Tiff_Reader creating a Tiff_Reader object that can be used
   to access the file's IFD's sequentially with Read_Tiff_IFD.  The routine returns NULL if
   the file cannot be read or the contents of the file are not that of a Tiff file.  One can skip
   over the next IFD with Advance_Tiff_Reader, start accessing IFD's from the beginning again with
   Rewind_Tiff_Reader, and can test if any IFD's remain with End_Of_Tiff.  Advance_Tiff_Reader
   returns a non-zero value if the Tiff is not properly encoded or is at the last IFD, and
   End_OF_Tiff returns a non-zero value if the last IFD has been read.

   Data blocks can be compressed shorts or ints in an endian order dependent on the producing
   machine.  Presumably the endian indicator of the TIFF file is correct for that data (either
   that or *somebody elses* reader/writer has already blown it :-))   Therefore, Open_Tiff_Reader
   returns the endian indicator "big_endian" for the image data.  All IFD's read from this file
   will assume that this is the endian order of the image data and a Tiff_Writer will write
   all the data out in this endian in order to guarantee the correct downstream interpreation
   of the data.  Note carefully, that all tags in an IFD are in native endian order while in
   memory (they are flipped on read and/or write as necessary).  If you create a tif by creating
   and writing a series of IFD's, then the tiff endian will be that which is native to the
   producing machine (Native_Endian returns 0 iff native order is little-endian).

   LSM FILES:

   If the Tiff_Reader is opened for an LSM file, by passing a non-zero value for the parameter
   lsm to Open_Tiff_Reader, then it assumes it is reading an lsm file as encoded by the Zeiss
   spec if ROWS_PER_STRIP is not defined.  In this case it restores the encoding to that of a
   true tiff by removing the following "warts":
     (a) the BITS_PER_PIXEL vector is placed in the value field of the tag if it fits
     (b) the color map is shifted to use the high-order bytes if the low-order bytes were used,
     (c) a tag for ROWS_PER_STRIP is added, 
     (d) the CZ_LSM_INFO tag is a block that points at other blocks that are not necessarily
            contiguous.  These are consolidated into a single block, the count-field of *the*
            tag is set to the size of this block and all sub-block offsets become relative to
            this super-block (as opposed to the start of the file), and
     (e) STRIP_BYTE_COUNTs are accurately computed by lzw decoding each strip if
            the lsm is compressed.
   Fix (e) takes a bit of extra time but is necessary if one is to strictly adhere to the standard.
   If the Tiff_Reader is for an lsm but ROWS_PER_STRIP is defined, then the package assumes
   it is reading an LSM file that it wrote (see below) in which case only wart (a) remains and
   needs to be handled.

   While the tags may not be in ascending order of labels internaly, Write_Tiff_IFD, sorts them
   before writing so that a standard tiff results from a write.  However, if the Tiff_Writer is
   asked to write a .lsm file, then Write_Tiff_IFD reintroduces wart (a) as it writes out the file,
   so that other ".lsm" readers (such as Image J or Zeiss's software) can open it.  The fixing of
   the other warts should not affect ".lsm" readers (confirmed for Image J).
*/

typedef void Tiff_Reader;
Tiff_Reader *Open_Tiff_Reader(char *name, int *big_endian, int lsm);
void         Rewind_Tiff_Reader(Tiff_Reader *tif);
int          Advance_Tiff_Reader(Tiff_Reader *tif);
int          End_Of_Tiff(Tiff_Reader *tif);
void         Free_Tiff_Reader(Tiff_Reader *tif);
void         Kill_Tiff_Reader(Tiff_Reader *tif);
void         Reset_Tiff_Reader();
int          Tiff_Reader_Usage();
/* One can begin the creation of a tif file with Open_Tiff_Writer that creates a Tiff_Writer
   object.  NULL is return if the file could not be opened for writing.  The file will be written
   as an lsm file if the parameter is non-zero.  One writes successive IFD's with Write_Tiff_IFD,
   and one must take care to close the writer with Close_Tiff_Writer before the program ends or
   the Tiff_Writer is killed or freed.  (The file associated with a Tiff_Reader or a
   Tiff_Annotator (see below) is automatically closed upon termination, free, or kill.)
*/

typedef void Tiff_Writer;
Tiff_Writer *Open_Tiff_Writer(char *name, int lsm);
void         Close_Tiff_Writer(Tiff_Writer *tif);
void         Free_Tiff_Writer(Tiff_Writer *tif);
void         Kill_Tiff_Writer(Tiff_Writer *tif);
void         Reset_Tiff_Writer();
int          Tiff_Writer_Usage();
/* An IFD with space for a given number of tags can be created with Create_Tiff_IFD.  The label,
   count, type, and value of a tag can be fetched from an IFD with Get_Tiff_Tag and set with
   Set_Tiff_Tag.  Set_Tiff_Tag returns a non-zero value if the count is not positive or the type
   is not a valid Tiff type.  If the tag doesn't currently exist in the IFD when it is set, then
   it is automatically added, and if it doesn't exist when it is fetched then NULL is returned.
   One can also delete an existing tag with Delete_Tiff_Tag.

   Read_Tiff_IFD returns NULL if the next IFD in the file is improperly formatted.  Write_Tiff_IFD
   returns a non-zero value if it writes multiple IFD's and they do not all have the same
   endian order for the image data, or if it has been instructed to write an lsm and can't find
   Zeiss's tag in the first IFD.
*/

typedef void Tiff_IFD;
Tiff_IFD    *Create_Tiff_IFD(int num_tags);
Tiff_IFD    *Read_Tiff_IFD(Tiff_Reader *tif);
int          Write_Tiff_IFD(Tiff_Writer *tif, Tiff_IFD *ifd);
void         Print_Tiff_IFD(Tiff_IFD *ifd, FILE *output);
void         Free_Tiff_IFD(Tiff_IFD *tif);
void         Kill_Tiff_IFD(Tiff_IFD *tif);
void         Reset_Tiff_IFD();
int          Tiff_IFD_Usage();